--- a/src/app/recommendations.module.css
+++ b/src/app/recommendations.module.css
@@ -8,6 +8,9 @@
     text-align: left;
     text-overflow: ellipsis;
     max-height: 200px;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    display: contents;
 }
 .author {
     color: black;
@@ -17,8 +20,8 @@
 .carousel_item {
     position: relative;
     width: 100%;
-    height: 400px; /* Adjust the height as needed */
-    overflow: hidden;
+    height: 100%; 
+    /* overflow: hidden; */
     box-shadow: black;
 }
 
@@ -31,15 +34,15 @@
   
   .overlay {
     overflow: hidden;
-    position: absolute;
+    /* position: absolute; */
     top: 0;
     left: 0;
     width: 95%; 
-    height: 95%;
+    height: 100%;
     display: flex;
     box-shadow: 5px 5px 5px grey;
     flex-direction: column;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     padding: 5%;
     align-items: center;
     background-color: #E8E5E1; /* Adjust the overlay background color and opacity */
@@ -64,6 +67,8 @@
 .circleImage {
     width: 100%; /* Make the image fill the container */
     height: 100%; /* Make the image fill the container */
-    object-fit: cover; /* Maintain aspect ratio and cover the entire container */
+    object-fit: contain; /* Maintain aspect ratio and cover the entire container */
     border-radius: 50%; /* Ensure the image itself is circular */
 }
+
+
